@@ -1,0 +1,4 @@
+void
+Init_empty(void)
+{
+}
