@@ -1,0 +1,3 @@
+if $mingw or $mswin
+  create_makefile("-test-/win32/dln/empty")
+end
